# reward-shaping-rl

./: .gitmodules  README.md  environment.py  exps.ipynb  main.py  pyproject.toml  qlearn.py  requirements.txt
conf/: config.yaml
conf/hydra/job_logging/: custom.yaml
data/: moves.txt  pkmn_lists.txt  status_list.txt
outputs/2023-12-04/01-00-09/.hydra/: hydra.yaml  (+1 more)
pokeagent/: cross_evaluate.py  environment.py  main.py  qlearn.py  self_play.py
pokeagent/agents/: SimpleRLAgent.py  agent.py  max_damage.py  pokegym.py
pokeagent/conf/: config.yaml
pokeagent/environments/: pokeenv.py  pokeenv_PPO.py
pokeagent/models/: agent.py  dqn.py  memory.py
pokeagent/utils/: query_llm.py  reward.py  setup.py
scripts/: run.sh  run_dqn.sh  run_dqn_m1.sh  run_dqn_m2.sh  run_dqn_m3.sh  run_ppo_m1.sh  run_ppo_m2.sh  run_ppo_m3.sh
utils/: __init__.py  query_llm.py  reward.py  setup.py
wandb/: latest-run
wandb/run-20231204_010614-D96B5BB9-A5AE-4724-9D1D-AF8A8FD2F410/: run-D96B5BB9-A5AE-4724-9D1D-AF8A8FD2F410.wandb
wandb/run-20231204_013209-5122DA56-3241-43F7-9451-61651ADDE5D9/: run-5122DA56-3241-43F7-9451-61651ADDE5D9.wandb
wandb/run-20231204_013847-3C2FAEBF-3C0A-442C-8B33-B87A4573C3AE/: run-3C2FAEBF-3C0A-442C-8B33-B87A4573C3AE.wandb
wandb/run-20231204_013932-56A930A7-BE5D-4102-989C-1912DDF631EC/: run-56A930A7-BE5D-4102-989C-1912DDF631EC.wandb
wandb/run-20231204_014640-8ADF0F75-530A-452F-96AA-A490C3317AF6/: run-8ADF0F75-530A-452F-96AA-A490C3317AF6.wandb
wandb/run-20231204_014734-5509A5D6-5B39-4BA9-BB93-5212C2DFAB03/: run-5509A5D6-5B39-4BA9-BB93-5212C2DFAB03.wandb
(+99 files in other folders)
